# QtPersistence

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  HACKING  INSTALL  QtPersistence.doap  README.md
cmake/modules/: FindGMock.cmake
src/: CMakeLists.txt
src/core/: databaseconfiguration.cpp  databaseconfiguration_p.h  existingobjectsavestate.cpp  existingobjectsavestate.h  introspection.cpp  introspection.h  newobjectsavestate.cpp  newobjectsavestate.h  objectloader.h  objectsavestate.h  qpersistantobject.cpp  qpersistantobject.h  qpersistantobject_p.h  qtpersistence.cpp  qtpersistence.h
src/tests/: CMakeLists.txt  databaseconfigurationtest.cpp  databaseconfigurationtest.h  existingobjectsavestatetest.cpp  existingobjectsavestatetest.h  fakebook.h  inflectiontest.cpp  inflectiontest.h  introspectiontest.cpp  introspectiontest.h  mockobjectsavestate.h  newobjectsavestatetest.cpp  newobjectsavestatetest.h  objectloadertest.cpp  objectloadertest.h  qpersistantobjectimpltest.cpp  qpersistantobjectimpltest.h  qpersistantobjecttest.cpp  qpersistantobjecttest.h  qtpersistencetest.cpp  qtpersistencetest.h  testmain.cpp  testutils.cpp  testutils.h
src/utils/: inflection.cpp  inflection.h  inflection_p.h
